<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>20</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>io.quarkiverse.jdiameter</groupId>
    <artifactId>quarkus-jdiameter-parent</artifactId>
    <version>2.2.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Quarkus :: JDiameter :: ${project.artifactId}</name>
    <description>Quarkus JDiameter Parent</description>

    <scm>
        <connection>scm:git:git@github.com:quarkiverse/quarkus-jdiameter.git</connection>
        <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-jdiameter.git</developerConnection>
        <url>https://github.com/quarkiverse/quarkus-jdiameter</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/eddiecarpenter/quarkus-jdiameter/issues/</url>
    </issueManagement>

    <licenses>
        <license>
            <name>GNU Affero General Public License</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>eddiecarpenter</id>
            <name>Eddie Carpenter</name>
            <email>eddie.carpenter@icloud.com</email>
            <roles>
                <role>Project Lead</role>
            </roles>
            <timezone>NZST (GMT+12)</timezone>
        </developer>
    </developers>

    <modules>
        <module>core</module>
        <module>quarkus-diameter</module>
    </modules>

    <properties>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <format.skip>true</format.skip>
        <commons-pool.version>1.6</commons-pool.version>
        <junit.version>5.12.0</junit.version>
        <slf4j.version>2.0.17</slf4j.version>
        <netty.version>4.2.0.Final</netty.version>
        <jakarta.version>4.0.1</jakarta.version>
        <surefire.version>3.5.2</surefire.version>
        <jandex.version>3.1.2</jandex.version>
        <lombok.version>1.18.36</lombok.version>

        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>

        <compiler-plugin.version>3.14.0</compiler-plugin.version>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.gpg.version>3.2.5</maven.gpg.version>
        <maven.enforcer.version>3.5.0</maven.enforcer.version>
        <maven-jandex-plugin.version>3.2.7</maven-jandex-plugin.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.version>3.21.3</quarkus.version>


        <!-- maven-enforcer-plugin -->
        <maven.min.version>3.5.0</maven.min.version>
        <jdk.min.version>${maven.compiler.source}</jdk.min.version>
        <insecure.repositories>ERROR</insecure.repositories>
    </properties>

    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Repository Switchboard</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.jdiameter</groupId>
                <artifactId>quarkus-jdiameter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.jdiameter</groupId>
                <artifactId>jdiameter-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.jdiameter</groupId>
                <artifactId>jdiameter-impl</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.version}</version>
                <executions>
                    <execution>
                        <id>enforce-java-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <bannedRepositories>
                                    <message>To build this project, don't use maven repositories over HTTP. Please use
                                        HTTPS in your settings.xml or run the build with property
                                        insecure.repositories=WARN
                                    </message>
                                    <level>${insecure.repositories}</level>
                                    <bannedRepositories>
                                        <bannedRepository>http://*</bannedRepository>
                                    </bannedRepositories>
                                    <bannedPluginRepositories>
                                        <bannedPluginRepository>http://*</bannedPluginRepository>
                                    </bannedPluginRepositories>
                                </bannedRepositories>
                                <requireJavaVersion>
                                    <message>To build this project JDK ${jdk.min.version} (or greater) is required.
                                        Please install it.
                                    </message>
                                    <version>${jdk.min.version}</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                    <execution>
                        <id>enforce-maven-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <message>To build this project Maven ${maven.min.version} (or greater) is required.
                                        Please install it.
                                    </message>
                                    <version>${maven.min.version}</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>docs</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>docs</module>
            </modules>
        </profile>
        <profile>
            <id>it</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>integration-tests</module>
            </modules>
        </profile>
    </profiles>
</project>
